# core

./: .gitignore  README.md  mhl-core.session.sh.example
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: setup.md  tmux-setup.md
src/: .prettierignore  AGENTS.md  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml
src/client/: eslint.config.js  index.html  package.json
src/pdf-parse/: README.md  pyproject.toml
src/pdf-parse/app/: config.py  deps.py  exception_handlers.py  main.py
src/pdf-parse/app/routers/: extract.py  health.py
src/pdf-parse/app/schemas/: api_response.py  docling.py  extract.py
src/pdf-parse/app/services/: docling.py  provider.py
src/server/: .env.example  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
src/server/src/: app.ts  config.ts  server.ts
src/server/src/plugins/: swagger.ts
src/server/src/routes/: index.ts
src/server/src/routes/health/: health.routes.ts
src/server/src/schemas/: common.ts
src/server/src/services/: ai.ts
