[project]
name = "pdf-parse"
version = "0.1.0"
description = "Local PDF parsing server for My Health Logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.65.0",
    "fastapi[standard]>=0.124.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
